@@ -1,5 +1,8 @@
 Major changes between version 1.0 and 1.0.1
 ------------------------------------------------
+  - Use getprotoent() and getservent() to read protocol and service
+    name <-> number mappings rather than home grown parsing. This
+    finally notes the aliases as well.
   - Fix installation of PAM module.
   - Get the correct clocks per second value for the return from
     times() using sysconf(), CLK_TCK or HZ.
